# zakiPlayer

./: CMakeLists.txt  README.md  main.cpp
src/: audiospectrum.cpp  audiospectrum.h  fullscreenlyrics.cpp  fullscreenlyrics.h  lyricsview.cpp  lyricsview.h  main.cpp  mainwindow.cpp  mainwindow.h  pinnedlyrics.cpp  pinnedlyrics.h  playercontroller.cpp  playercontroller.h  playlistmodel.cpp  playlistmodel.h  playlistwidget.cpp  playlistwidget.h  settingsmanager.cpp  settingsmanager.h  toast.cpp  toast.h  visualizer.cpp  visualizer.h
